examples/invalid/02_top_level_let_forward_value.lane
// invalid: top-level let initializers follow ordered value scope
module Examples.Invalid02
pub let y : Int = x
pub let x : Int = 1
